# tc2-agent

./: .gitignore  .travis.yml  Cargo.toml  README.md  deploy.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yaml
_releases/: .gitignore  org.cacophony.TC2Agent.conf  rp2040-firmware.elf  tc2-agent.service  tc2-firmware.sha256
_releases/scripts/: postinst
src/: camera_transfer_state.rs  cptv_frame_dispatch.rs  cptv_header.rs  dbus_attiny.rs  dbus_attiny_i2c.rs  dbus_audio.rs  dbus_managementd.rs  detection_mask.rs  device_config.rs  double_buffer.rs  event_logger.rs  frame_socket_server.rs  main.rs  mode_config.rs  program_rp2040.rs  recording_state.rs  save_audio.rs  save_cptv.rs  service.rs  socket_stream.rs  telemetry.rs  utils.rs
