[package]
name = "tc2-agent"
version = "0.1.0-snapshot"
edition = "2021"
description = "Program to read lepton frames from the RP2040"
license = "GPL v3.0"
authors = ["Cacophony Developers <coredev@cacophony.org.nz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = "0.3.1"
bmp = "0.5.0"
rppal = "0.14.1"
chrono = "0.4.24"
byteorder = { version = "^1.3", default-features = false }
thread-priority = "0.13.1"
argh = "0.1.10"
mdns-sd = "0.7.3"


[target.armv7-unknown-linux-musleabihf]
# applies to target-specific builds

# rPi4
#rustflags = "-C target-cpu=cortex-a72"

# rPi3
rustflags = "-C target-cpu=cortex-a53"

[package.metadata.deb]
name = "tc2-agent"
maintainer = "Cacophony Developers <coredev@cacophony.org.nz>"
depends = ""
assets = [
  ["target/release/tc2-agent", "/usr/bin/", "755"],
  ["_releases/tc2-agent.service", "/etc/systemd/system/tc2-agent.service", "664"],
  ["_releases/rp2040-firmware.elf", "/etc/cacophony/rp2040-firmware.elf", "664"],
]
maintainer-scripts = "_releases/scripts"