[package]
name = "tc2-agent"
version = "0.2.0-snapshot"
edition = "2021"
description = "Program to interface between the Raspberry Pi and the RP2040 in the DOC AI Cam"
license = "GPL v3.0"
authors = ["Cacophony Developers <coredev@cacophony.org.nz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = "0.3.1"
bmp = "0.5.0"
rppal = "0.14.1"
chrono = "0.4.31"
byteorder = "1.4.3"
thread-priority = "0.13.1"
argh = "0.1.10"
mdns-sd = "0.7.3"
crc = "3.0.1"
log = "0.4.19"
simplelog = "0.12.1"
flate2 = "1.0.26"
nom = "7.1.3"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
notify = { version = "6.1.1", default-features = false }

[target.armv7-unknown-linux-musleabihf]
# applies to target-specific builds

# rPi3
rustflags = "-C target-cpu=cortex-a53"

[package.metadata.deb]
name = "tc2-agent"
maintainer = "Cacophony Developers <coredev@cacophony.org.nz>"
depends = ""
assets = [
  ["target/release/tc2-agent", "/usr/bin/", "755"], # Binary asset
  ["_releases/tc2-agent.service", "/etc/systemd/system/tc2-agent.service", "664"],
]
maintainer-scripts = "_releases/scripts"
