[package]
name = "tc2-agent"
version = "0.0.0-snapshot"  # Updated by travis on release.
edition = "2024"
description = "Program to interface between the Raspberry Pi and the RP2040 in the DOC AI Cam"
license = "GPL v3.0"
authors = ["Cacophony Developers <coredev@cacophony.org.nz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.19.0"
chrono = { version = "0.4.38", features = ["serde"] }
byteorder = "1.4.3"
thread-priority = "1.1.0"
argh = "0.1.10"
mdns-sd = "0.11.0"
crc = "3.0.1"
log = "0.4.19"
simplelog = "0.12.1"
flate2 = "1.0.33"
nom = "7.1.3"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.8.8"
notify = { version = "6.1.1", default-features = false }
chrono-tz = "0.10.0"
signal-hook = "0.3.17"
sun-times = "0.2.0"
louvre = "0.2.1"
rustbus = "0.19.3"
sha256 = "1.5.0"
sysinfo = "0.35.2"

[target.aarch64-unknown-linux-musl]
# applies to target-specific builds
# rPi3
rustflags = "-C target-cpu=cortex-a53"

[package.metadata.deb]
name = "tc2-agent"
maintainer = "Cacophony Developers <coredev@cacophony.org.nz>"
depends = ""
assets = [
    ["target/release/tc2-agent", "/usr/bin/", "755"], # Binary asset
    ["_releases/tc2-agent.service", "/etc/systemd/system/tc2-agent.service", "664"],
    ["_releases/org.cacophony.TC2Agent.conf", "/etc/dbus-1/system.d/org.cacophony.TC2Agent.conf", "664"],
    ["_releases/tc2-firmware", "/etc/cacophony/rp2040-firmware.elf", "664"],
]
maintainer-scripts = "_releases/scripts"
revision = ""

[profile.release]
lto = true
